--- a/demo/react/src/App.css
+++ b/demo/react/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f5f5f5;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#slider-container {
+  position:relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid darkgrey;
+  border-radius: 0.5rem;
+  background-color: lightgrey;
+  width: 24vw;
+ 
+}
+
+.slider {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.slide {
+  display: block; /* Hide slides by default */
+  position: relative;
+  width: 15rem;
+  margin: 5%;
+
+}
+
+.slide img {
+  width: 100%;
+  display: block;
+  border-radius: 0.5rem;
+  box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+}
+
+.like-button {
+  background-color: darkred;
   color: white;
+  border: none;
+  border-radius: 0.2rem;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.like-button.liked {
+  background-color: #ff0000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.slide-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  background-color: #fff;
+  border: none;
+  border-radius: 0.2rem;
+  padding: 10px;
+  margin: 0.2rem;
+  z-index: 10;
+}
+
+.prev-arrow {
+  left: 0;
+}
+
+.next-arrow {
+  right: 0;
 }
